:wheelchair: fix inaccessible links on safari

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -109,7 +109,9 @@ img {
 .link,
 .rendered a {
   text-decoration: underline;
-  text-decoration: dotted underline var(--color-on-base);
+  text-decoration-color: var(--color-on-base);
+  text-decoration-style: solid;
+  text-decoration-style: dotted;
   transition: all 300ms;
 }
 
